--- a/node-hero-game/package.json
+++ b/node-hero-game/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.9",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "inquirer": "^9.2.7"
   }
 }
